# ucx_examples

./: README.md
client-server/: CMakeLists.txt  README.md  ucx_client.cpp  ucx_send_recv.cpp  ucx_send_recv.hpp  ucx_server.cpp
